--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.5.0",
     "@emotion/react": "^11.5.0",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.0.4",
+    "clsx": "^1.1.1",
     "effector": "^22.1.2",
     "effector-next": "^1.3.2",
     "effector-react": "^22.0.4",
@@ -22,10 +25,12 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/react": "17.0.30",
+    "@types/node": "^16.11.1",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.10",
     "csstype": "^3.0.9",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.2",
-    "typescript": "4.4.4"
+    "typescript": "^4.4.4"
   }
 }
