--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alex-dev-playground",
+  "name": "imperium-guild-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,28 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/cache": "^11.5.0",
-    "@emotion/react": "^11.5.0",
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.4",
-    "@mui/material": "^5.0.4",
-    "@mui/styles": "^5.0.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.8",
+    "@mui/styles": "^5.2.3",
     "clsx": "^1.1.1",
     "effector": "^22.1.2",
     "effector-next": "^1.3.2",
-    "effector-react": "^22.0.4",
-    "next": "11.1.2",
+    "effector-react": "^22.0.6",
+    "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/node": "^16.11.1",
-    "@types/react": "^17.0.30",
-    "@types/react-dom": "^17.0.10",
-    "csstype": "^3.0.9",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "^4.4.4"
+    "@types/node": "^17.0.9",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "csstype": "^3.0.10",
+    "eslint": "^8.7.0",
+    "eslint-config-next": "12.0.8",
+    "typescript": "^4.5.4"
   }
 }
