--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true,
-    "noFallthroughCasesInSwitch": true
-    // "jsx": "react-jsx"
+    "noFallthroughCasesInSwitch": true,
+    // "jsx": "react-jsx",
+    "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
